feat: add group endpoint
